sample/retrieveUnpackaged/objects/User.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <relationshipName>UserApprover</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Birthdate__c</fullName>
        <label>(Hidden) Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Confirmed_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Hidden) Confirmed Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PortalReg_Confirm_Password__c</fullName>
        <description>For portal registration</description>
        <label>Confirm Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalReg_Customer_Name__c</fullName>
        <description>Used by portal registration</description>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalReg_Customer_Number__c</fullName>
        <description>Used by portal registration</description>
        <label>Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalReg_Drivers_License_Number__c</fullName>
        <description>Used by portal registration</description>
        <label>Drivers License Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalReg_Password__c</fullName>
        <description>New password for portal registration</description>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Portal_Password_Reset__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Applicable for portal users only. This is only set if the user is created by a CSO and not via self-registration.</inlineHelpText>
        <label>Require Portal Password Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secret_Answer__c</fullName>
        <label>Secret Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Question__c</fullName>
        <label>Secret Question</label>
        <picklist>
            <picklistValues>
                <fullName>What is the name of your favourite pet?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What city or town where you born in?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What is your mother’s maiden name?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Who is your favourite historical figure?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What was the last school you attended?</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Id__c</fullName>
        <externalId>true</externalId>
        <label>Universal Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>SEW Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Live_Agent_User</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LIVEAGENT_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Live Agent User</label>
    </listViews>
    <listViews>
        <fullName>SEW_CSO</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>SEW CSO Team Leader,SEW CSO (Customer Service Officer)</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SEW CSO</label>
    </listViews>
    <listViews>
        <fullName>SEW_CSO_Team_Leaders</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>SEW CSO Team Leader</value>
        </filters>
        <label>SEW CSO Team Leaders</label>
    </listViews>
    <listViews>
        <fullName>SEW_Staff</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SEW Staff</label>
    </listViews>
    <listViews>
        <fullName>SFDC_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>SFDC</value>
        </filters>
        <label>SFDC Users</label>
        <sharedTo>
            <group>Admin</group>
        </sharedTo>
    </listViews>
    <namedFilters>
        <fullName>nf_01IO00000000WSlMAM_00NO0000000crgmMAA</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <errorMessage>The selected user must be a Portal user.</errorMessage>
        <field>Portal_Marketing_Page_Tracking__c.User__c</field>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>SEW WaterMAP Portal User</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>SEW WaterMAP Only Portal User</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>SEW Portal User</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Overage High Volume Customer Portal User</value>
        </filterItems>
        <infoMessage>Select the Portal User for this tracking record.</infoMessage>
        <isOptional>false</isOptional>
        <name>Portal Marketing Page Tracking_User</name>
    </namedFilters>
</CustomObject>